@@ -39,8 +39,11 @@ import javax.swing.JButton;
 import javax.swing.JComboBox;
 import javax.swing.JDialog;
 import javax.swing.JOptionPane;
+import javax.swing.JPanel;
 import javax.swing.JRadioButton;
 import javax.swing.JTextField;
+import javax.swing.border.EmptyBorder;
+
 import org.catacombae.io.ReadableRandomAccessStream;
 import org.catacombae.io.ReadableConcatenatedStream;
 import org.catacombae.storage.io.win32.ReadableWin32FileStream;
@@ -65,6 +68,7 @@ import org.catacombae.storage.ps.PartitionType;
 import org.catacombae.storage.ps.PartitionType.ContentType;
 import org.catacombae.storage.ps.gpt.GPTRecognizer;
 import org.catacombae.util.ObjectContainer;
+
 
 /**
  * @author <a href="https://catacombae.org" target="_top">Erik Larsson</a>
@@ -92,26 +96,25 @@ public abstract class SelectDeviceDialog extends JDialog {
     private long lastRefreshTimestamp = 0;
 
     private interface SelectDeviceDialogFactory {
+
         public boolean isSystemSupported();
+
         public SelectDeviceDialog createDeviceDialog(Frame owner, boolean modal,
-                String title);
+                                                     String title);
     }
 
-    private static final WindowsNT4Factory windowsNt4Factory =
-        new WindowsNT4Factory();
+    private static final WindowsNT4Factory windowsNt4Factory = new WindowsNT4Factory();
 
     private static final SelectDeviceDialogFactory factories[] = {
-        new WindowsFactory(),
-        windowsNt4Factory, /* Must come immediately after WindowsFactory. */
-        new LinuxFactory(),
-        new MacOSXFactory(),
-        new FreeBSDFactory(),
-        new SolarisFactory(),
+            new WindowsFactory(),
+            windowsNt4Factory, /* Must come immediately after WindowsFactory. */
+            new LinuxFactory(),
+            new MacOSXFactory(),
+            new FreeBSDFactory(),
+            new SolarisFactory(),
     };
 
-    protected SelectDeviceDialog(final Frame owner, final boolean modal,
-            final String title)
-    {
+    protected SelectDeviceDialog(final Frame owner, final boolean modal, final String title) {
         super(owner, modal);
         setTitle(title);
 
@@ -131,60 +134,52 @@ public abstract class SelectDeviceDialog extends JDialog {
         refreshDevices();
 
         autodetectButton.addActionListener(new ActionListener() {
-                /* @Override */
-                public void actionPerformed(ActionEvent ae) {
+            public void actionPerformed(ActionEvent ae) {
                     autodetectFilesystems();
-                }
-            });
+            }
+        });
         detectedDevicesCombo.addItemListener(new ItemListener() {
-                /* @Override */
-                public void itemStateChanged(ItemEvent ie) {
-                    if(ie.getStateChange() == ItemEvent.SELECTED)
-                        specifyDeviceNameField.setText(getDevicePrefix() +
-                                ie.getItem().toString());
-                }
-            });
+            public void itemStateChanged(ItemEvent ie) {
+                if (ie.getStateChange() == ItemEvent.SELECTED)
+                    specifyDeviceNameField.setText(getDevicePrefix() + ie.getItem().toString());
+            }
+        });
         selectDeviceButton.addActionListener(new ActionListener() {
-                /* @Override */
-                public void actionPerformed(ActionEvent ae) {
-                    detectedDevicesCombo.setEnabled(true);
-                    specifyDeviceNameField.setEnabled(false);
-                    specifyDeviceNameField.setText(getDevicePrefix() +
-                            detectedDevicesCombo.getSelectedItem().toString());
-                }
-            });
+            public void actionPerformed(ActionEvent ae) {
+                detectedDevicesCombo.setEnabled(true);
+                specifyDeviceNameField.setEnabled(false);
+                specifyDeviceNameField.setText(getDevicePrefix() + detectedDevicesCombo.getSelectedItem().toString());
+            }
+        });
         specifyDeviceNameButton.addActionListener(new ActionListener() {
-                /* @Override */
-                public void actionPerformed(ActionEvent ae) {
-                    detectedDevicesCombo.setEnabled(false);
-                    specifyDeviceNameField.setEnabled(true);
-                }
-            });
+            public void actionPerformed(ActionEvent ae) {
+                detectedDevicesCombo.setEnabled(false);
+                specifyDeviceNameField.setEnabled(true);
+            }
+        });
         loadButton.addActionListener(new ActionListener() {
-                /* @Override */
-                public void actionPerformed(ActionEvent ae) {
-                    resultCreatePath = specifyDeviceNameField.getText();
-                    result = createStream(resultCreatePath);
-                    dispose();
-                }
-            });
+            public void actionPerformed(ActionEvent ae) {
+                resultCreatePath = specifyDeviceNameField.getText();
+                result = createStream(resultCreatePath);
+                dispose();
+            }
+        });
         cancelButton.addActionListener(new ActionListener() {
-                /* @Override */
-                public void actionPerformed(ActionEvent ae) {
-                    dispose();
-                }
-            });
+            public void actionPerformed(ActionEvent ae) {
+                dispose();
+            }
+        });
         addWindowFocusListener(new WindowAdapter() {
-                @Override
-                public void windowGainedFocus(WindowEvent we) {
-                    refreshDevices();
-                }
-            });
+            @Override
+            public void windowGainedFocus(WindowEvent we) {
+                refreshDevices();
+            }
+        });
 
-// 	JPanel container = new JPanel();
-// 	container.setLayout(new BorderLayout());
-// 	container.setBorder(new EmptyBorder(5, 5, 5, 5));
-// 	container.add(guiPanel, BorderLayout.CENTER);
+//        JPanel container = new JPanel();
+//        container.setLayout(new BorderLayout());
+//        container.setBorder(new EmptyBorder(5, 5, 5, 5));
+//        container.add(guiPanel, BorderLayout.CENTER);
 
         add(guiPanel, BorderLayout.CENTER);
         pack();
@@ -194,8 +189,8 @@ public abstract class SelectDeviceDialog extends JDialog {
 
     private void refreshDevices() {
         long refreshTimestamp = System.currentTimeMillis();
-        if(refreshTimestamp - lastRefreshTimestamp < 100) {
-            /* Prevent a flood of requests. */
+        if (refreshTimestamp - lastRefreshTimestamp < 100) {
+            // Prevent a flood of requests.
             return;
         }
         lastRefreshTimestamp = refreshTimestamp;
@@ -204,42 +199,37 @@ public abstract class SelectDeviceDialog extends JDialog {
         detectedDevicesCombo.removeAllItems();
 
         String newDeviceNames[] = detectDevices();
-        for(String name : newDeviceNames) {
+        for (String name : newDeviceNames) {
             detectedDevicesCombo.addItem(name);
         }
 
-        if(newDeviceNames.length > 0) {
-            /* Calculate new selected index. */
-            final int i_limit =
-                    (detectedDeviceNames == null) ? 0 :
-                    detectedDeviceNames.length;
+        if (newDeviceNames.length > 0) {
+            // Calculate new selected index.
+            final int i_limit = (detectedDeviceNames == null) ? 0 : detectedDeviceNames.length;
             final int j_limit = newDeviceNames.length;
 
             int i, j;
-            for(i = 0, j = 0; i < i_limit && j < j_limit;) {
-                if(detectedDeviceNames[i].equals(newDeviceNames[j])) {
-                    if(i == selectedIndex) {
+            for (i = 0, j = 0; i < i_limit && j < j_limit; ) {
+                if (detectedDeviceNames[i].equals(newDeviceNames[j])) {
+                    if (i == selectedIndex) {
                         break;
                     }
 
                     ++i;
                     ++j;
-                }
-                else if(j <= i) {
+                } else if (j <= i) {
                     ++i;
                 }
             }
 
-            if(j >= j_limit) {
+            if (j >= j_limit) {
                 j = j_limit - 1;
             }
 
             detectedDevicesCombo.setSelectedIndex(j);
 
-            specifyDeviceNameField.setText(getDevicePrefix() +
-                    detectedDevicesCombo.getSelectedItem().toString());
-        }
-        else {
+            specifyDeviceNameField.setText(getDevicePrefix() + detectedDevicesCombo.getSelectedItem().toString());
+        } else {
             detectedDevicesCombo.setSelectedIndex(-1);
             specifyDeviceNameField.setText("");
         }
@@ -248,28 +238,19 @@ public abstract class SelectDeviceDialog extends JDialog {
     }
 
     public ReadableRandomAccessStream getPartitionStream() {
-        if(this instanceof WindowsNT4 &&
-                result instanceof ReadableWin32FileStream)
-        {
-            /* Check if we need to offset the stream to handle a GPT layout
-             * inside a protective MBR partition. */
-            final int sectorSize =
-                    ((ReadableWin32FileStream) result).getSectorSize();
+        if (this instanceof WindowsNT4 && result instanceof ReadableWin32FileStream) {
+            // Check if we need to offset the stream to handle a GPT layout
+            // inside a protective MBR partition.
+            final int sectorSize = ((ReadableWin32FileStream) result).getSectorSize();
             final ReadableRandomAccessStream gptStream;
 
-            /* Try detecting GPT partitions inside MBR protective
-             * partition by creating a sector-sized hole preceding the
-             * device for the MBR. */
-            gptStream = new ReadableConcatenatedStream(
-                    /* ReadableRandomAccessStream firstPart */
-                    result,
-                    /* long startOffset */
-                    -sectorSize,
-                    /* long length */
-                    result.length() + sectorSize);
+            // Try detecting GPT partitions inside MBR protective
+            // partition by creating a sector-sized hole preceding the
+            // device for the MBR.
+            gptStream = new ReadableConcatenatedStream(result, -sectorSize, result.length() + sectorSize);
 
             GPTRecognizer gptRecognizer = new GPTRecognizer();
-            if(gptRecognizer.detect(gptStream, 0, gptStream.length())) {
+            if (gptRecognizer.detect(gptStream, 0, gptStream.length())) {
                 return gptStream;
             }
         }
@@ -277,7 +258,9 @@ public abstract class SelectDeviceDialog extends JDialog {
     }
 
     /** Could include an identifier of a partitioning scheme. This should only be used to display a descriptive locator. */
-    public String getPathName() { return resultCreatePath; }
+    public String getPathName() {
+        return resultCreatePath;
+    }
 
     protected ReadableRandomAccessStream createStream(final String path) {
         return new ReadableFileStream(path);
@@ -294,8 +277,8 @@ public abstract class SelectDeviceDialog extends JDialog {
     public static boolean isSystemSupported() {
         boolean supported = false;
 
-        for(SelectDeviceDialogFactory factory : factories) {
-            if(factory.isSystemSupported()) {
+        for (SelectDeviceDialogFactory factory : factories) {
+            if (factory.isSystemSupported()) {
                 supported = true;
                 break;
             }
@@ -304,26 +287,16 @@ public abstract class SelectDeviceDialog extends JDialog {
         return supported;
     }
 
-    public static SelectDeviceDialog createSelectDeviceDialog(final Frame owner,
-            final boolean modal, final String title)
-    {
+    public static SelectDeviceDialog createSelectDeviceDialog(final Frame owner, final boolean modal, final String title) {
         SelectDeviceDialog dialog = null;
 
-        for(SelectDeviceDialogFactory factory : factories) {
-            if(factory.isSystemSupported()) {
+        for (SelectDeviceDialogFactory factory : factories) {
+            if (factory.isSystemSupported()) {
                 dialog = factory.createDeviceDialog(owner, modal, title);
-                if(dialog instanceof SelectDeviceDialog.Windows &&
-                    dialog.detectedDeviceNames.length == 0)
-                {
+                if (dialog instanceof SelectDeviceDialog.Windows && dialog.detectedDeviceNames.length == 0) {
                     SelectDeviceDialog nt4dialog =
-                        windowsNt4Factory.createDeviceDialog(
-                            /* Frame owner */
-                            owner,
-                            /* boolean modal */
-                            modal,
-                            /* String title */
-                            title);
-                    if(nt4dialog.detectedDeviceNames.length != 0) {
+                            windowsNt4Factory.createDeviceDialog(owner, modal, title);
+                    if (nt4dialog.detectedDeviceNames.length != 0) {
                         dialog = nt4dialog;
                     }
                 }
@@ -334,23 +307,19 @@ public abstract class SelectDeviceDialog extends JDialog {
         return dialog;
     }
 
-    private String getFilesystemInfo(ReadableRandomAccessStream deviceStream,
-            String deviceDescription)
-    {
+    private String getFilesystemInfo(ReadableRandomAccessStream deviceStream, String deviceDescription) {
         String fsInfo = null;
         DataLocator inputDataLocator = null;
 
         try {
-            inputDataLocator =
-                    new ReadableStreamDataLocator(deviceStream);
-            FileSystemMajorType[] fsTypes =
-                    FileSystemDetector.detectFileSystem(inputDataLocator);
+            inputDataLocator = new ReadableStreamDataLocator(deviceStream);
+            FileSystemMajorType[] fsTypes = FileSystemDetector.detectFileSystem(inputDataLocator);
             FileSystemHandlerFactory fsFactory = null;
 
-            for(FileSystemMajorType type : fsTypes) {
+            for (FileSystemMajorType type : fsTypes) {
                 FileSystemHandler fsHandler = null;
                 try {
-                    switch(type) {
+                    switch (type) {
                         case APPLE_HFS:
                         case APPLE_HFS_PLUS:
                         case APPLE_HFSX:
@@ -360,32 +329,31 @@ public abstract class SelectDeviceDialog extends JDialog {
                             break;
                     }
 
-                    if(fsFactory != null) {
+                    if (fsFactory != null) {
                         fsHandler = fsFactory.createHandler(inputDataLocator);
-                        fsInfo = "\"" + fsHandler.getRoot().getName() + "\" " +
-                                "(" + deviceDescription + ")";
+                        fsInfo = "\"" + fsHandler.getRoot().getName() + "\" (" + deviceDescription + ")";
                         break;
                     }
-                } catch(Exception e) {
+                } catch (Exception e) {
                     System.err.println("Exception while getting file system " +
                             "label for filesystem major type " + type + ":");
                     e.printStackTrace();
                 } finally {
-                    if(fsHandler != null) {
+                    if (fsHandler != null) {
                         fsHandler.close();
                     }
                 }
             }
-        } catch(Exception e) {
+        } catch (Exception e) {
             System.err.println("Exception while getting file system label:");
             e.printStackTrace();
         } finally {
-            if(inputDataLocator != null) {
+            if (inputDataLocator != null) {
                 inputDataLocator.close();
             }
         }
 
-        if(fsInfo == null) {
+        if (fsInfo == null) {
             fsInfo = deviceDescription;
         }
 
@@ -404,11 +372,10 @@ public abstract class SelectDeviceDialog extends JDialog {
     private String getFilesystemInfoString(EmbeddedPartitionEntry pe) {
         ReadableRandomAccessStream fsStream = null;
         try {
-            fsStream =
-                    new ReadableConcatenatedStream(
-                    createStream(getDevicePrefix() + pe.deviceName),
-                    pe.psOffset + pe.partition.getStartOffset(),
-                    pe.partition.getLength());
+            fsStream = new ReadableConcatenatedStream(
+                            createStream(getDevicePrefix() + pe.deviceName),
+                            pe.psOffset + pe.partition.getStartOffset(),
+                            pe.partition.getLength());
             return getFilesystemInfo(fsStream, pe.toString());
         } finally {
         }
@@ -417,28 +384,26 @@ public abstract class SelectDeviceDialog extends JDialog {
     protected void autodetectFilesystems() {
         LinkedList<String> plainFileSystems = new LinkedList<String>();
         LinkedList<EmbeddedPartitionEntry> embeddedFileSystems = new LinkedList<EmbeddedPartitionEntry>();
-        //String skipPrefix = null;
+//        String skipPrefix = null;
 
         refreshDevices();
 
         // Look for file systems that sit inside partition systems unsupported by Windows.
-        for(int i = 0; i < detectedDeviceNames.length; ++i) {
+        for (int i = 0; i < detectedDeviceNames.length; ++i) {
             String deviceName = detectedDeviceNames[i];
-// 	    System.out.println("Checking if \"" + name + "\" might be an unsupported partition system...");
-// 	    System.out.println("  name.startsWith(\"CdRom\") == " + name.startsWith(DEVICE_PREFIX + "CdRom"));
-// 	    System.out.println("  name.endsWith(\"Partition0\") == " + name.endsWith("Partition0"));
+//            System.out.println("Checking if \"" + name + "\" might be an unsupported partition system...");
+//            System.out.println("  name.startsWith(\"CdRom\") == " + name.startsWith(DEVICE_PREFIX + "CdRom"));
+//            System.out.println("  name.endsWith(\"Partition0\") == " + name.endsWith("Partition0"));
 
-            /*
-            if(name.startsWith("CdRom") ||
-               (name.endsWith("Partition0") &&
-                !(i+1 < detectedDeviceNames.length && detectedDeviceNames[i+1].endsWith("Partition1"))) ) {
-            */
-                // We have an unidentifed partition system at "name"
-// 		System.out.println("TRUE!");
-            //if(skipPrefix != null && deviceName.startsWith(skipPrefix))
-            //    continue;
-            //else
-            //    skipPrefix = null;
+//            if (name.startsWith("CdRom") ||
+//                    (name.endsWith("Partition0") &&
+//                            !(i + 1 < detectedDeviceNames.length && detectedDeviceNames[i + 1].endsWith("Partition1")))) {
+            // We have an unidentifed partition system at "name"
+//            System.out.println("TRUE!");
+//            if (skipPrefix != null && deviceName.startsWith(skipPrefix))
+//                continue;
+//            else
+//                skipPrefix = null;
 
             ReadableRandomAccessStream llf = null;
             int psOffset = 0;
@@ -447,47 +412,36 @@ public abstract class SelectDeviceDialog extends JDialog {
             try {
                 llf = createStream(getDevicePrefix() + deviceName);
 
-                PartitionSystemType[] detectedTypes =
-                        PartitionSystemDetector.detectPartitionSystem(llf,
-                        false);
+                PartitionSystemType[] detectedTypes = PartitionSystemDetector.detectPartitionSystem(llf, false);
 
-                if(detectedTypes.length == 0 && this instanceof WindowsNT4 &&
-                        llf instanceof ReadableWin32FileStream)
-                {
-                    final int sectorSize =
-                            ((ReadableWin32FileStream) llf).getSectorSize();
+                if (detectedTypes.length == 0 && this instanceof WindowsNT4 &&
+                        llf instanceof ReadableWin32FileStream) {
+                    final int sectorSize = ((ReadableWin32FileStream) llf).getSectorSize();
                     final ReadableRandomAccessStream gptStream;
 
-                    /* Try detecting GPT partitions inside MBR protective
-                     * partition by creating a sector-sized hole preceding the
-                     * device for the MBR. */
+                    // Try detecting GPT partitions inside MBR protective
+                    // partition by creating a sector-sized hole preceding the
+                    // device for the MBR.
                     psOffset = -sectorSize;
-                    gptStream = new ReadableConcatenatedStream(
-                            /* ReadableRandomAccessStream firstPart */
-                            llf,
-                            /* long startOffset */
-                            -sectorSize,
-                            /* long length */
-                            llf.length() + sectorSize);
+                    gptStream = new ReadableConcatenatedStream(llf, -sectorSize, llf.length() + sectorSize);
 
                     GPTRecognizer a = new GPTRecognizer();
-                    if(a.detect(gptStream, 0, gptStream.length())) {
+                    if (a.detect(gptStream, 0, gptStream.length())) {
                         detectedTypes = new PartitionSystemType[] {
-                            PartitionSystemType.GPT,
+                                PartitionSystemType.GPT,
                         };
                         llf = gptStream;
                     }
                 }
 
                 PartitionSystemType pst;
-                if(detectedTypes.length == 1)
+                if (detectedTypes.length == 1)
                     pst = detectedTypes[0];
-                else if(detectedTypes.length == 0)
+                else if (detectedTypes.length == 0)
                     pst = null;
                 else {
-                    String msg = detectedTypes.length + " partition " +
-                            "types detected: { ";
-                    for(PartitionSystemType t : detectedTypes)
+                    String msg = detectedTypes.length + " partition types detected: { ";
+                    for (PartitionSystemType t : detectedTypes)
                         msg += t + " ";
                     msg += "} Cannot continue.";
                     throw new RuntimeException(msg);
@@ -495,196 +449,155 @@ public abstract class SelectDeviceDialog extends JDialog {
 
                 boolean fileSystemFound = false;
 
-                if(pst != null) {
-                    PartitionSystemHandlerFactory fact =
-                            pst.createDefaultHandlerFactory();
+                if (pst != null) {
+                    PartitionSystemHandlerFactory fact = pst.createDefaultHandlerFactory();
 
                     llfLocator = new ReadableStreamDataLocator(llf);
                     partSys = fact.createHandler(llfLocator);
 
-                    ArrayList<Partition> parts =
-                            new ArrayList<Partition>(Arrays.asList(partSys.
-                            getPartitions()));
-                    for(int j = 0; j < parts.size(); ++j) {
+                    ArrayList<Partition> parts = new ArrayList<Partition>(Arrays.asList(partSys.getPartitions()));
+                    for (int j = 0; j < parts.size(); ++j) {
                         Partition part = parts.get(j);
                         PartitionType pt = part.getType();
 
-                        if(pt.getContentType() == ContentType.PARTITION_SYSTEM)
-                        {
-                            PartitionSystemType epst =
-                                    pt.getAssociatedPartitionSystemType();
+                        if (pt.getContentType() == ContentType.PARTITION_SYSTEM) {
+                            PartitionSystemType epst = pt.getAssociatedPartitionSystemType();
                             PartitionSystemHandler ph =
-                                    epst.createDefaultHandlerFactory().
-                                    createHandler(
-                                    new SubDataLocator(llfLocator,
-                                    part.getStartOffset(),
-                                    part.getLength()));
+                                    epst.createDefaultHandlerFactory().createHandler(new SubDataLocator(llfLocator,
+                                            part.getStartOffset(), part.getLength()));
                             EmbeddedPartitionEntry outerPartitionEntry =
-                                    new EmbeddedPartitionEntry(deviceName, j,
-                                    pst, part, psOffset);
+                                    new EmbeddedPartitionEntry(deviceName, j, pst, part, psOffset);
                             Partition[] embeddedPartitions = ph.getPartitions();
-                            for(int k = 0; k < embeddedPartitions.length; ++k) {
+                            for (int k = 0; k < embeddedPartitions.length; ++k) {
                                 Partition embeddedPart = embeddedPartitions[k];
 
                                 PartitionType ept = embeddedPart.getType();
-                                if(ept != PartitionType.APPLE_HFS_CONTAINER &&
-                                    ept != PartitionType.APPLE_HFSX)
-                                {
+                                if (ept != PartitionType.APPLE_HFS_CONTAINER && ept != PartitionType.APPLE_HFSX) {
                                     continue;
                                 }
 
-                                FileSystemType fsType =
-                                        HFSCommonFileSystemRecognizer.
-                                            detectFileSystem(llf,
-                                                part.getStartOffset() +
-                                                embeddedPart.getStartOffset());
+                                FileSystemType fsType = HFSCommonFileSystemRecognizer.detectFileSystem(llf,
+                                        part.getStartOffset() + embeddedPart.getStartOffset());
 
-                                if(HFSCommonFileSystemRecognizer.
-                                        isTypeSupported(fsType))
-                                {
+                                if (HFSCommonFileSystemRecognizer.isTypeSupported(fsType)) {
                                     fileSystemFound = true;
-                                    embeddedFileSystems.add(
-                                            new EmbeddedPartitionEntry(
-                                            outerPartitionEntry, k, epst,
-                                            embeddedPart, psOffset));
+                                    embeddedFileSystems.add(new EmbeddedPartitionEntry(
+                                                    outerPartitionEntry, k, epst, embeddedPart, psOffset));
                                 }
                             }
 
                             ph.close();
-                        }
-                        else if(pt == PartitionType.APPLE_HFS_CONTAINER ||
-                                pt == PartitionType.APPLE_HFSX) {
-                            FileSystemType fsType =
-                                    HFSCommonFileSystemRecognizer.
-                                        detectFileSystem(llf,
-                                            part.getStartOffset());
+                        } else if (pt == PartitionType.APPLE_HFS_CONTAINER || pt == PartitionType.APPLE_HFSX) {
+                            FileSystemType fsType = HFSCommonFileSystemRecognizer.
+                                            detectFileSystem(llf, part.getStartOffset());
 
-                            if(HFSCommonFileSystemRecognizer.isTypeSupported(
-                                    fsType)) {
+                            if (HFSCommonFileSystemRecognizer.isTypeSupported(fsType)) {
                                 fileSystemFound = true;
-                                embeddedFileSystems.add(
-                                        new EmbeddedPartitionEntry(deviceName,
-                                        j, pst, part, psOffset));
+                                embeddedFileSystems.add(new EmbeddedPartitionEntry(deviceName, j, pst, part, psOffset));
                             }
                         }
                     }
                 }
 
-                if(!fileSystemFound && !isPartition(deviceName)) {
-                    FileSystemType fsType = HFSCommonFileSystemRecognizer.
-                            detectFileSystem(llf, 0);
+                if (!fileSystemFound && !isPartition(deviceName)) {
+                    FileSystemType fsType = HFSCommonFileSystemRecognizer.detectFileSystem(llf, 0);
 
-                    if(HFSCommonFileSystemRecognizer.isTypeSupported(fsType))
+                    if (HFSCommonFileSystemRecognizer.isTypeSupported(fsType))
                         plainFileSystems.add(deviceName);
                 }
-                /* If we found file systems in embedded partition systems,
-                 * ignore windows-detected partitions if the embedded partition
-                 * system is at Partition0. */
-                //else if(deviceName.endsWith("Partition0"))
-                //    skipPrefix = deviceName.substring(0, deviceName.length()-1);
-            } catch(Exception e) {
+                // If we found file systems in embedded partition systems,
+                // ignore windows-detected partitions if the embedded partition
+                // system is at Partition0. */
+//                else if(deviceName.endsWith("Partition0"))
+//                    skipPrefix = deviceName.substring(0, deviceName.length()-1);
+            } catch (Exception e) {
                 System.out.println("INFO: Non-critical exception while " +
-                        "detecting partition system at \"" + getDevicePrefix() +
-                        deviceName + "\": " + e.toString());
+                        "detecting partition system at \"" + getDevicePrefix() + deviceName + "\": " + e.toString());
 
-                if(llf != null) {
-                    FileSystemType fsType = HFSCommonFileSystemRecognizer.
-                            detectFileSystem(llf, 0);
+                if (llf != null) {
+                    FileSystemType fsType = HFSCommonFileSystemRecognizer.detectFileSystem(llf, 0);
 
-                    if(HFSCommonFileSystemRecognizer.isTypeSupported(fsType))
+                    if (HFSCommonFileSystemRecognizer.isTypeSupported(fsType))
                         plainFileSystems.add(deviceName);
                 }
             } finally {
-                if(partSys != null) {
-                    partSys.close(); /* Will also close llfLocator, llf. */
-                }
-                else if(llfLocator != null) {
-                    llfLocator.close(); /* Will also close llf. */
-                }
-                else if(llf != null) {
+                if (partSys != null) {
+                    partSys.close(); // Will also close llfLocator, llf.
+                } else if (llfLocator != null) {
+                    llfLocator.close(); // Will also close llf.
+                } else if (llf != null) {
                     llf.close();
                 }
             }
         }
 
-        if(plainFileSystems.size() >= 1 || embeddedFileSystems.size() >= 1) {
+        if (plainFileSystems.size() >= 1 || embeddedFileSystems.size() >= 1) {
             int i;
 
             String[] plainStrings = new String[plainFileSystems.size()];
             i = 0;
-            for(String cur : plainFileSystems) {
+            for (String cur : plainFileSystems) {
                 plainStrings[i++] = getFilesystemInfoString(cur);
             }
 
             String[] embeddedStrings = new String[embeddedFileSystems.size()];
             i = 0;
-            for(EmbeddedPartitionEntry cur : embeddedFileSystems) {
+            for (EmbeddedPartitionEntry cur : embeddedFileSystems) {
                 embeddedStrings[i++] = getFilesystemInfoString(cur);
             }
 
-            String[] allOptions =
-                    new String[plainStrings.length+embeddedStrings.length];
-            for(i = 0; i < plainStrings.length; ++i)
+            String[] allOptions = new String[plainStrings.length + embeddedStrings.length];
+            for (i = 0; i < plainStrings.length; ++i)
                 allOptions[i] = plainStrings[i];
-            for(i = 0; i < embeddedStrings.length; ++i)
-                allOptions[plainStrings.length+i] = embeddedStrings[i];
+            for (i = 0; i < embeddedStrings.length; ++i)
+                allOptions[plainStrings.length + i] = embeddedStrings[i];
 
             Object selectedValue = JOptionPane.showInputDialog(this,
                     "Autodetection complete! Found " + allOptions.length + " " +
-                    "HFS+ file systems.\n" +
-                    "Please choose which one to load:",
+                            "HFS+ file systems.\n" +
+                            "Please choose which one to load:",
                     "Load HFS+ file system", JOptionPane.QUESTION_MESSAGE,
                     null, allOptions, allOptions[0]);
 
-            if(selectedValue != null) {
+            if (selectedValue != null) {
                 int selectedIndex = -1;
-                for(i = 0; i < allOptions.length; ++i) {
-                    if(selectedValue.equals(allOptions[i])) {
+                for (i = 0; i < allOptions.length; ++i) {
+                    if (selectedValue.equals(allOptions[i])) {
                         selectedIndex = i;
                         break;
                     }
                 }
 
-                if(selectedIndex == -1) {
+                if (selectedIndex == -1) {
                     throw new RuntimeException("selectedIndex == -1");
-                }
-                else {
-                    if(selectedIndex >= plainStrings.length) {
+                } else {
+                    if (selectedIndex >= plainStrings.length) {
                         // We have an embedded FS
                         selectedIndex -= plainStrings.length;
-                        EmbeddedPartitionEntry embeddedInfo =
-                                embeddedFileSystems.get(selectedIndex);
-                        if(embeddedInfo == null)
+                        EmbeddedPartitionEntry embeddedInfo = embeddedFileSystems.get(selectedIndex);
+                        if (embeddedInfo == null)
                             throw new RuntimeException("embeddedInfo == null");
 
-
-                        switch(embeddedInfo.psType) {
+                        switch (embeddedInfo.psType) {
                             case APM:
                             case GPT:
                             case MBR:
                             case DOS_EXTENDED:
                                 ReadableRandomAccessStream llf =
-                                        createStream(getDevicePrefix() +
-                                        embeddedInfo.deviceName);
+                                        createStream(getDevicePrefix() + embeddedInfo.deviceName);
 
                                 Partition p = embeddedInfo.partition;
-                                resultCreatePath = getDevicePrefix() +
-                                        embeddedInfo.toString();
+                                resultCreatePath = getDevicePrefix() + embeddedInfo.toString();
                                 result = new ReadableConcatenatedStream(llf,
-                                        embeddedInfo.psOffset +
-                                        p.getStartOffset(), p.getLength());
+                                        embeddedInfo.psOffset + p.getStartOffset(), p.getLength());
                                 dispose();
                                 break;
                             default:
-                                throw new RuntimeException("Unexpected " +
-                                        "partition system: " +
-                                        embeddedInfo.psType);
+                                throw new RuntimeException("Unexpected partition system: " + embeddedInfo.psType);
                         }
-                    }
-                    else {
-                        final String plainInfo =
-                                plainFileSystems.get(selectedIndex);
-                        if(plainInfo == null) {
+                    } else {
+                        final String plainInfo = plainFileSystems.get(selectedIndex);
+                        if (plainInfo == null) {
                             throw new RuntimeException("plainInfo == null");
                         }
 
@@ -695,42 +608,40 @@ public abstract class SelectDeviceDialog extends JDialog {
                 }
             }
         }
-// 	else if(plainFileSystems.size() > 0) {
-// 	    int res = JOptionPane.showConfirmDialog(this, "Autodetection complete! Found an " +
-// 						    "HFS+ file system at \"" +
-// 						    plainFileSystems.getFirst() +"\".\n" +
-// 						    "Do you want to load it?",
-// 						    "Load HFS+ file system",
-// 						    JOptionPane.YES_NO_OPTION,
-// 						    JOptionPane.QUESTION_MESSAGE);
-// 	    if(res == JOptionPane.YES_OPTION) {
-// 		result = DEVICE_PREFIX + plainFileSystems.getFirst();
-// 	        dispose();
-// 	    }
-// 	}
+//        else if (plainFileSystems.size() > 0) {
+//            int res = JOptionPane.showConfirmDialog(this, "Autodetection complete! Found an " +
+//                            "HFS+ file system at \"" +
+//                            plainFileSystems.getFirst() + "\".\n" +
+//                            "Do you want to load it?",
+//                    "Load HFS+ file system",
+//                    JOptionPane.YES_NO_OPTION,
+//                    JOptionPane.QUESTION_MESSAGE);
+//            if (res == JOptionPane.YES_OPTION) {
+//                result = DEVICE_PREFIX + plainFileSystems.getFirst();
+//                dispose();
+//            }
+//        }
         else
             JOptionPane.showMessageDialog(this, "No HFS+ file systems found...",
-                                          "Result",
-                                          JOptionPane.INFORMATION_MESSAGE);
+                    "Result",
+                    JOptionPane.INFORMATION_MESSAGE);
     }
 
     private static class WindowsFactory implements SelectDeviceDialogFactory {
+
         public boolean isSystemSupported() {
             return System.getProperty("os.name").toLowerCase().
                     startsWith("windows");
         }
 
-        public SelectDeviceDialog createDeviceDialog(final Frame owner,
-                final boolean modal, final String title)
-        {
+        public SelectDeviceDialog createDeviceDialog(final Frame owner, final boolean modal, final String title) {
             return new SelectDeviceDialog.Windows(owner, modal, title);
         }
     }
 
     private static class Windows extends SelectDeviceDialog {
-        public Windows(final Frame owner, final boolean modal,
-                final String title)
-        {
+
+        public Windows(final Frame owner, final boolean modal, final String title) {
             super(owner, modal, title);
         }
 
@@ -748,8 +659,7 @@ public abstract class SelectDeviceDialog extends JDialog {
         }
 
         protected boolean isPartition(final String deviceName) {
-            return !deviceName.endsWith("Partition0") &&
-                    deviceName.matches("Harddisk[0-9]+\\\\Partition[0-9]+$");
+            return !deviceName.endsWith("Partition0") && deviceName.matches("Harddisk[0-9]+\\\\Partition[0-9]+$");
         }
 
         /**
@@ -758,54 +668,51 @@ public abstract class SelectDeviceDialog extends JDialog {
          * names. For example, Bo Brantén's filedisk creates a device with
          * another name. However, if your file system is on a file, this method
          * is not needed.
+         *
          * @return a list of the names of the detected devices
          */
         protected String[] detectDevices() {
             LinkedList<String> activeDeviceNames = new LinkedList<String>();
 
-            /*
-             * Since I've been too lazy to figure out how to implement a native
-             * method for reading the contents of the device tree, I'll just
-             * make up names for at least 20 harddrives, with at least 20
-             * partitions in each and check for existence.
-             */
+            //
+            // Since I've been too lazy to figure out how to implement a native
+            // method for reading the contents of the device tree, I'll just
+            // make up names for at least 20 harddrives, with at least 20
+            // partitions in each and check for existence.
+            //
 
-            /* 20 hard drives minimum... */
-            for(int i = 0; true; ++i) {
+            // 20 hard drives minimum...
+            for (int i = 0; true; ++i) {
                 boolean anyFound = false;
-                /* 20 partitions each minimum... */
-                for(int j = 0; true; ++j) {
+                // 20 partitions each minimum...
+                for (int j = 0; true; ++j) {
                     try {
-                        /* Should I add Partition0 to the list? It really means
-                         * "the whole drive". Partition1 is the first
-                         * partition... */
-                        String currentDevice =
-                                "Harddisk" + i + "\\Partition" + j;
-                        ReadableRandomAccessStream curFile =
-                                createStream(getDevicePrefix() + currentDevice);
+                        // Should I add Partition0 to the list? It really means
+                        // "the whole drive". Partition1 is the first
+                        // partition...
+                        String currentDevice = "Harddisk" + i + "\\Partition" + j;
+                        ReadableRandomAccessStream curFile = createStream(getDevicePrefix() + currentDevice);
                         curFile.close();
                         activeDeviceNames.addLast(currentDevice);
                         anyFound = true;
-                    } catch(Exception e) {
-                        if(j >= 20)
+                    } catch (Exception e) {
+                        if (j >= 20)
                             break;
                     }
                 }
-                if(!anyFound && i >= 20)
-                   break;
+                if (!anyFound && i >= 20)
+                    break;
             }
 
             /* ...and 20 CD-ROMs minimum */
-            for(int i = 0; true; ++i) {
+            for (int i = 0; true; ++i) {
                 try {
                     String currentDevice = "CdRom" + i;
-                    ReadableRandomAccessStream curFile =
-                            createStream(getDevicePrefix() + currentDevice);
+                    ReadableRandomAccessStream curFile = createStream(getDevicePrefix() + currentDevice);
                     curFile.close();
                     activeDeviceNames.addLast(currentDevice);
-                }
-                catch(Exception e) {
-                    if(i >= 20) {
+                } catch (Exception e) {
+                    if (i >= 20) {
                         break;
                     }
                 }
@@ -813,40 +720,34 @@ public abstract class SelectDeviceDialog extends JDialog {
 
             /* Check for TrueCrypt volumes 'A'-'Z', using their special naming
              * scheme. */
-            for(char c = 'A'; c <= 'Z'; ++c) {
+            for (char c = 'A'; c <= 'Z'; ++c) {
                 try {
                     String currentDevice = "TrueCryptVolume" + c;
-                    ReadableRandomAccessStream curFile =
-                            createStream(getDevicePrefix() + currentDevice);
+                    ReadableRandomAccessStream curFile = createStream(getDevicePrefix() + currentDevice);
                     curFile.close();
                     activeDeviceNames.addLast(currentDevice);
+                } catch (Exception e) {
                 }
-                catch(Exception e) {}
             }
 
-            return activeDeviceNames.toArray(
-                    new String[activeDeviceNames.size()]);
+            return activeDeviceNames.toArray(new String[activeDeviceNames.size()]);
         }
     }
 
-    private static class WindowsNT4Factory implements SelectDeviceDialogFactory
-    {
+    private static class WindowsNT4Factory implements SelectDeviceDialogFactory {
+
         public boolean isSystemSupported() {
-            return System.getProperty("os.name").toLowerCase().
-                    startsWith("windows");
+            return System.getProperty("os.name").toLowerCase().startsWith("windows");
         }
 
-        public SelectDeviceDialog createDeviceDialog(final Frame owner,
-                final boolean modal, final String title)
-        {
+        public SelectDeviceDialog createDeviceDialog(final Frame owner, final boolean modal, final String title) {
             return new SelectDeviceDialog.WindowsNT4(owner, modal, title);
         }
     }
 
     private static class WindowsNT4 extends SelectDeviceDialog {
-        public WindowsNT4(final Frame owner, final boolean modal,
-                final String title)
-        {
+
+        public WindowsNT4(final Frame owner, final boolean modal, final String title) {
             super(owner, modal, title);
         }
 
@@ -864,11 +765,11 @@ public abstract class SelectDeviceDialog extends JDialog {
         }
 
         protected boolean isPartition(final String deviceName) {
-            /* Technically this is true, however this is used only to determine
-             * if we should ignore it in favour of the internal partition
-             * system parser, and we can't use it if we don't have access to
-             * the whole devices. So return false (maybe this method should be
-             * renamed). */
+            // Technically this is true, however this is used only to determine
+            // if we should ignore it in favour of the internal partition
+            // system parser, and we can't use it if we don't have access to
+            // the whole devices. So return false (maybe this method should be
+            // renamed).
             return false;
         }
 
@@ -876,40 +777,38 @@ public abstract class SelectDeviceDialog extends JDialog {
          * This method is only tested with Windows NT 4.0. (SP6a, x86). Also,
          * it won't work with devices that are not mounted using the Windows NT
          * standard names.
+         *
          * @return a list of the names of the detected devices
          */
         protected String[] detectDevices() {
             LinkedList<String> activeDeviceNames = new LinkedList<String>();
 
-            /*
-             * Since I've been too lazy to figure out how to implement a native
-             * method for reading the contents of the device tree I'll just
-             * iterate over all possible drive letters.
-             */
+            //
+            // Since I've been too lazy to figure out how to implement a native
+            // method for reading the contents of the device tree I'll just
+            // iterate over all possible drive letters.
+            //
 
-            /* If all else fails, use drive letters. */
-            if(activeDeviceNames.size() == 0) {
-                for(char c = 'A'; c <= 'Z'; ++c) {
+            // If all else fails, use drive letters.
+            if (activeDeviceNames.size() == 0) {
+                for (char c = 'A'; c <= 'Z'; ++c) {
                     try {
                         String currentDevice = c + ":";
-                        ReadableRandomAccessStream curFile =
-                                createStream(getDevicePrefix() + currentDevice);
+                        ReadableRandomAccessStream curFile = createStream(getDevicePrefix() + currentDevice);
                         curFile.close();
                         activeDeviceNames.addLast(currentDevice);
-                    } catch(Exception e) {
+                    } catch (Exception e) {
                     }
                 }
             }
 
-            return activeDeviceNames.toArray(
-                    new String[activeDeviceNames.size()]);
+            return activeDeviceNames.toArray(new String[activeDeviceNames.size()]);
         }
     }
 
     private static abstract class CommonUNIX extends SelectDeviceDialog {
-        public CommonUNIX(final Frame owner, final boolean modal,
-                final String title)
-        {
+
+        public CommonUNIX(final Frame owner, final boolean modal, final String title) {
             super(owner, modal, title);
         }
 
@@ -921,31 +820,27 @@ public abstract class SelectDeviceDialog extends JDialog {
 
         protected String[] detectDevices() {
             final File devDirFile = new File(getDevicePrefix());
-            final File[] diskDevices =
-                    devDirFile.listFiles(getDiskDeviceFileNameFilter());
-            final ArrayList<String> deviceNames =
-                    new ArrayList<String>(diskDevices.length);
+            final File[] diskDevices = devDirFile.listFiles(getDiskDeviceFileNameFilter());
+            final ArrayList<String> deviceNames = new ArrayList<String>(diskDevices.length);
 
-            for(int i = 0; i < diskDevices.length; ++i) {
+            for (int i = 0; i < diskDevices.length; ++i) {
                 final String curName = diskDevices[i].getName();
-                final ObjectContainer<Boolean> canRead =
-                        new ObjectContainer<Boolean>(null);
+                final ObjectContainer<Boolean> canRead = new ObjectContainer<Boolean>(null);
 
                 Thread t = new Thread() {
                     @Override
                     public void run() {
                         FileInputStream is = null;
                         try {
-                            is = new FileInputStream(getDevicePrefix() +
-                                    curName);
+                            is = new FileInputStream(getDevicePrefix() + curName);
                             canRead.o = true;
-                        } catch(IOException ex) {
+                        } catch (IOException ex) {
                             canRead.o = false;
                         } finally {
-                            if(is != null) {
+                            if (is != null) {
                                 try {
                                     is.close();
-                                } catch(IOException ex) {
+                                } catch (IOException ex) {
                                     ex.printStackTrace();
                                 }
                             }
@@ -955,30 +850,26 @@ public abstract class SelectDeviceDialog extends JDialog {
 
                 t.start();
                 try {
-                    /* We wait 5 seconds for the thread to finish. */
+                    // We wait 5 seconds for the thread to finish.
                     t.join(5000);
-                } catch(InterruptedException ex) {
+                } catch (InterruptedException ex) {
                     throw new RuntimeException(ex);
                 }
 
                 t.interrupt();
 
-                if(canRead.o == null) {
-                    System.err.println("Timeout while detecting device at: " +
-                            getDevicePrefix() + curName);
-                }
-                else if(canRead.o) {
+                if (canRead.o == null) {
+                    System.err.println("Timeout while detecting device at: " + getDevicePrefix() + curName);
+                } else if (canRead.o) {
                     deviceNames.add(curName);
-                }
-                else {
-                    /* Just ignore device if we can't open it for reading. */
+                } else {
+                    // Just ignore device if we can't open it for reading.
                 }
             }
 
-            String deviceNamesArray[] =
-                    deviceNames.toArray(new String[deviceNames.size()]);
+            String deviceNamesArray[] = deviceNames.toArray(new String[deviceNames.size()]);
 
-            /* Sorted output is nice. */
+            // Sorted output is nice.
             Arrays.sort(deviceNamesArray);
 
             return deviceNamesArray;
@@ -986,21 +877,20 @@ public abstract class SelectDeviceDialog extends JDialog {
     }
 
     private static class LinuxFactory implements SelectDeviceDialogFactory {
+
         public boolean isSystemSupported() {
-            return System.getProperty("os.name").toLowerCase().
-                    startsWith("linux");
+            return System.getProperty("os.name").toLowerCase().startsWith("linux");
         }
 
-        public SelectDeviceDialog createDeviceDialog(final Frame owner,
-                final boolean modal, final String title)
-        {
+        public SelectDeviceDialog createDeviceDialog(final Frame owner, final boolean modal, final String title) {
             return new SelectDeviceDialog.Linux(owner, modal, title);
         }
     }
 
     private static class Linux extends CommonUNIX {
-        private static class LinuxDeviceFilenameFilter implements FilenameFilter
-        {
+
+        private static class LinuxDeviceFilenameFilter implements FilenameFilter {
+
             public boolean accept(File dir, String name) {
                 return name.matches("sd[a-z]+([0-9]+)?$") ||
                         name.matches("hd[a-z]+([0-9]+)?$") ||
@@ -1009,14 +899,13 @@ public abstract class SelectDeviceDialog extends JDialog {
                         name.matches("dm-[0-9]+$") ||
                         name.matches("mmcblk[0-9]+(p[0-9]+)?$");
             }
-        };
+        }
 
-        private static final FilenameFilter diskDeviceFileNameFilter =
-                new LinuxDeviceFilenameFilter();
+        ;
 
-        public Linux(final Frame owner, final boolean modal,
-                final String title)
-        {
+        private static final FilenameFilter diskDeviceFileNameFilter = new LinuxDeviceFilenameFilter();
+
+        public Linux(final Frame owner, final boolean modal, final String title) {
             super(owner, modal, title);
         }
 
@@ -1034,8 +923,8 @@ public abstract class SelectDeviceDialog extends JDialog {
 
         @Override
         protected String[] detectDevices() {
-            /* Special case for Linux: We read /proc/partitions in order to get
-             * a list of all block devices. */
+            // Special case for Linux: We read /proc/partitions in order to get
+            // a list of all block devices.
 
             final LinkedList<String> deviceNames = new LinkedList<String>();
 
@@ -1044,139 +933,127 @@ public abstract class SelectDeviceDialog extends JDialog {
                 try {
                     r = new BufferedReader(new InputStreamReader(
                             new FileInputStream("/proc/partitions"), "UTF-8"));
-                } catch(IOException e) {
+                } catch (IOException e) {
                     System.err.println("Unable to open /proc/partitions for " +
                             "reading! Falling back on common UNIX method for " +
                             "device detection.");
                     return super.detectDevices();
                 }
 
-                /* Skip first line, which is just a description. */
+                // Skip first line, which is just a description.
                 r.readLine();
 
-                for(String curLine; (curLine = r.readLine()) != null; ) {
-                    if(curLine.trim().length() == 0) {
-                        /* Ignore whitespace. */
+                for (String curLine; (curLine = r.readLine()) != null; ) {
+                    if (curLine.trim().length() == 0) {
+                        // Ignore whitespace.
                         continue;
                     }
 
-                    /* Parse line. */
+                    // Parse line.
                     char[] curLineChars = curLine.toCharArray();
                     int i = 0;
 
-                    /* Whitespace. */
-                    for(; i < curLineChars.length; ++i) {
-                        if(!Character.isWhitespace(curLineChars[i])) {
+                    // Whitespace.
+                    for (; i < curLineChars.length; ++i) {
+                        if (!Character.isWhitespace(curLineChars[i])) {
                             break;
                         }
                     }
 
-                    /* Major device number. */
-                    for(; i < curLineChars.length; ++i) {
-                        if(Character.isWhitespace(curLineChars[i])) {
+                    // Major device number.
+                    for (; i < curLineChars.length; ++i) {
+                        if (Character.isWhitespace(curLineChars[i])) {
                             break;
                         }
                     }
 
-                    /* Whitespace. */
-                    for(; i < curLineChars.length; ++i) {
-                        if(!Character.isWhitespace(curLineChars[i])) {
+                    // Whitespace.
+                    for (; i < curLineChars.length; ++i) {
+                        if (!Character.isWhitespace(curLineChars[i])) {
                             break;
                         }
                     }
 
-                    /* Minor device number. */
-                    for(; i < curLineChars.length; ++i) {
-                        if(Character.isWhitespace(curLineChars[i])) {
+                    // Minor device number.
+                    for (; i < curLineChars.length; ++i) {
+                        if (Character.isWhitespace(curLineChars[i])) {
                             break;
                         }
                     }
 
-                    /* Whitespace. */
-                    for(; i < curLineChars.length; ++i) {
-                        if(!Character.isWhitespace(curLineChars[i])) {
+                    // Whitespace.
+                    for (; i < curLineChars.length; ++i) {
+                        if (!Character.isWhitespace(curLineChars[i])) {
                             break;
                         }
                     }
 
-                    /* Block count. */
-                    for(; i < curLineChars.length; ++i) {
-                        if(Character.isWhitespace(curLineChars[i])) {
+                    // Block count.
+                    for (; i < curLineChars.length; ++i) {
+                        if (Character.isWhitespace(curLineChars[i])) {
                             break;
                         }
                     }
 
-                    /* Whitespace. */
-                    for(; i < curLineChars.length; ++i) {
-                        if(!Character.isWhitespace(curLineChars[i])) {
+                    // Whitespace.
+                    for (; i < curLineChars.length; ++i) {
+                        if (!Character.isWhitespace(curLineChars[i])) {
                             break;
                         }
                     }
 
-                    /* Device name. */
-                    if(i < curLineChars.length) {
-                        final String curName =
-                                new String(curLineChars, i,
-                                curLineChars.length - i).trim();
+                    // Device name.
+                    if (i < curLineChars.length) {
+                        final String curName = new String(curLineChars, i, curLineChars.length - i).trim();
                         try {
-                            final FileInputStream is =
-                                    new FileInputStream(getDevicePrefix() +
-                                    curName);
+                            final FileInputStream is = new FileInputStream(getDevicePrefix() + curName);
                             is.close();
 
                             deviceNames.add(curName);
-                        } catch(IOException ex) {
-                            /* Just ignore device if we can't open it for
-                             * reading. */
+                        } catch (IOException ex) {
+                            // Just ignore device if we can't open it for
+                            // reading.
                         }
-                    }
-                    else {
-                        System.err.println("Error while parsing " +
-                                "/proc/partitions line \"" + curLine + "\".");
+                    } else {
+                        System.err.println("Error while parsing /proc/partitions line \"" + curLine + "\".");
                     }
                 }
 
-                final String[] deviceNamesArray =
-                        deviceNames.toArray(new String[deviceNames.size()]);
+                final String[] deviceNamesArray = deviceNames.toArray(new String[deviceNames.size()]);
 
-                /* Sorted output is nice. */
+                // Sorted output is nice.
                 Arrays.sort(deviceNamesArray);
 
                 return deviceNamesArray;
-            } catch(IOException ex) {
+            } catch (IOException ex) {
                 throw new RuntimeIOException(ex);
             }
         }
     }
 
     private static class MacOSXFactory implements SelectDeviceDialogFactory {
+
         public boolean isSystemSupported() {
-            return System.getProperty("os.name").toLowerCase().
-                    startsWith("mac os x");
+            return System.getProperty("os.name").toLowerCase().startsWith("mac os x");
         }
 
-        public SelectDeviceDialog createDeviceDialog(final Frame owner,
-                final boolean modal, final String title)
-        {
+        public SelectDeviceDialog createDeviceDialog(final Frame owner, final boolean modal, final String title) {
             return new SelectDeviceDialog.MacOSX(owner, modal, title);
         }
     }
 
     private static class MacOSX extends CommonUNIX {
-        private static class MacOSXDeviceFilenameFilter
-                implements FilenameFilter
-        {
+
+        private static class MacOSXDeviceFilenameFilter implements FilenameFilter {
+
             public boolean accept(File dir, String name) {
                 return name.matches("disk[0-9]+(s[0-9]+)?$");
             }
-        };
+        }
 
-        private static final FilenameFilter diskDeviceFileNameFilter =
-                new MacOSXDeviceFilenameFilter();
+        private static final FilenameFilter diskDeviceFileNameFilter = new MacOSXDeviceFilenameFilter();
 
-        public MacOSX(final Frame owner, final boolean modal,
-                final String title)
-        {
+        public MacOSX(final Frame owner, final boolean modal, final String title) {
             super(owner, modal, title);
         }
 
@@ -1194,22 +1071,20 @@ public abstract class SelectDeviceDialog extends JDialog {
     }
 
     private static class FreeBSDFactory implements SelectDeviceDialogFactory {
+
         public boolean isSystemSupported() {
-            return System.getProperty("os.name").toLowerCase().
-                    startsWith("freebsd");
+            return System.getProperty("os.name").toLowerCase().startsWith("freebsd");
         }
 
-        public SelectDeviceDialog createDeviceDialog(final Frame owner,
-                final boolean modal, final String title)
-        {
+        public SelectDeviceDialog createDeviceDialog(final Frame owner, final boolean modal, final String title) {
             return new SelectDeviceDialog.FreeBSD(owner, modal, title);
         }
     }
 
     private static class FreeBSD extends CommonUNIX {
-        private static class FreeBSDDeviceFilenameFilter
-                implements FilenameFilter
-        {
+
+        private static class FreeBSDDeviceFilenameFilter implements FilenameFilter {
+
             public String[] knownDevices;
 
             public FreeBSDDeviceFilenameFilter(String[] knownDevices) {
@@ -1217,10 +1092,9 @@ public abstract class SelectDeviceDialog extends JDialog {
             }
 
             public boolean accept(File dir, String name) {
-                if(knownDevices != null) {
+                if (knownDevices != null) {
                     return acceptSpecific(dir, name);
-                }
-                else {
+                } else {
                     return acceptGeneric(dir, name);
                 }
             }
@@ -1228,9 +1102,8 @@ public abstract class SelectDeviceDialog extends JDialog {
             private boolean acceptSpecific(File dir, String name) {
                 boolean acceptResult = false;
 
-                for(String device : knownDevices) {
-                    if(name.matches("^" + device + "+([sp][0-9]+([a-z]+)?)?$"))
-                    {
+                for (String device : knownDevices) {
+                    if (name.matches("^" + device + "+([sp][0-9]+([a-z]+)?)?$")) {
                         acceptResult = true;
                         break;
                     }
@@ -1240,9 +1113,9 @@ public abstract class SelectDeviceDialog extends JDialog {
             }
 
             private boolean acceptGeneric(File dir, String name) {
-                /* Device naming info retrieved 2014-08-22 from:
-                 *   https://www.freebsd.org/doc/handbook/disk-organization.html
-                 */
+                // Device naming info retrieved 2014-08-22 from:
+                // https://www.freebsd.org/doc/handbook/disk-organization.html
+                //
                 return name.matches("ada[0-9]+([sp][0-9]+([a-z]+)?)?$") ||
                         name.matches("ad[0-9]+([sp][0-9]+([a-z]+)?)?$") ||
                         name.matches("da[0-9]+([sp][0-9]+([a-z]+)?)?$") ||
@@ -1260,14 +1133,12 @@ public abstract class SelectDeviceDialog extends JDialog {
                         name.matches("idad[0-9]+([sp][0-9]+([a-z]+)?)?$") ||
                         name.matches("twed[0-9]+([sp][0-9]+([a-z]+)?)?$");
             }
-        };
+        }
 
         private static final FilenameFilter genericdiskDeviceFileNameFilter =
                 new FreeBSDDeviceFilenameFilter(null);
 
-        public FreeBSD(final Frame owner, final boolean modal,
-                final String title)
-        {
+        public FreeBSD(final Frame owner, final boolean modal, final String title) {
             super(owner, modal, title);
         }
 
@@ -1277,59 +1148,51 @@ public abstract class SelectDeviceDialog extends JDialog {
             BufferedReader sysctlStdoutReader = null;
 
             try {
-                sysctlProcess = Runtime.getRuntime().exec(
-                        new String[] { "/sbin/sysctl", "kern.disks" });
+                sysctlProcess = Runtime.getRuntime().exec(new String[] {"/sbin/sysctl", "kern.disks"});
 
                 sysctlStdoutReader =
-                        new BufferedReader(new InputStreamReader(
-                        sysctlProcess.getInputStream(), "UTF-8"));
+                        new BufferedReader(new InputStreamReader(sysctlProcess.getInputStream(), "UTF-8"));
                 String disksString = sysctlStdoutReader.readLine();
 
                 int retval = sysctlProcess.waitFor();
-                if(retval != 0) {
+                if (retval != 0) {
                     System.err.println("sysctl returned error value (" +
                             retval + "). Falling back on exhaustive " +
                             "detection method.");
-                }
-                else if(disksString.startsWith("kern.disks: ")) {
-                    devices = disksString.substring("kern.disks: ".length()).
-                            split("\\s");
-                    if(devices.length == 0) {
-                        /* We should definitely have at least one disk. This
-                         * must be an error. */
+                } else if (disksString.startsWith("kern.disks: ")) {
+                    devices = disksString.substring("kern.disks: ".length()).split("\\s");
+                    if (devices.length == 0) {
+                        // We should definitely have at least one disk. This
+                        // must be an error. */
                         System.err.println("No disks returned from sysctl. " +
-                                "Falling back on exhaustive detection " +
-                                "method...");
+                                "Falling back on exhaustive detection method...");
                         devices = null;
                     }
-                }
-                else {
+                } else {
                     System.err.println("Unexpected output from sysctl " +
                             "command: \"" + disksString + "\" Falling back " +
                             "on exhaustive detection method...");
                 }
-            } catch(IOException ex) {
+            } catch (IOException ex) {
                 System.err.println("Exception while issuing sysctl command:");
                 ex.printStackTrace();
-                System.err.println("Falling back on exhaustive detection " +
-                        "method...");
-            } catch(InterruptedException e) {
+                System.err.println("Falling back on exhaustive detection method...");
+            } catch (InterruptedException e) {
                 throw new RuntimeException(e);
             } finally {
-                if(sysctlStdoutReader != null) {
+                if (sysctlStdoutReader != null) {
                     try {
                         sysctlStdoutReader.close();
-                    } catch(IOException ex) {
+                    } catch (IOException ex) {
                         ex.printStackTrace();
                     }
                 }
             }
 
             FilenameFilter filter;
-            if(devices != null) {
+            if (devices != null) {
                 filter = new FreeBSDDeviceFilenameFilter(devices);
-            }
-            else {
+            } else {
                 filter = genericdiskDeviceFileNameFilter;
             }
 
@@ -1346,38 +1209,33 @@ public abstract class SelectDeviceDialog extends JDialog {
     }
 
     private static class SolarisFactory implements SelectDeviceDialogFactory {
+
         public boolean isSystemSupported() {
-            return System.getProperty("os.name").toLowerCase().
-                    startsWith("sunos");
+            return System.getProperty("os.name").toLowerCase().startsWith("sunos");
         }
 
-        public SelectDeviceDialog createDeviceDialog(final Frame owner,
-                final boolean modal, final String title)
-        {
+        public SelectDeviceDialog createDeviceDialog(final Frame owner, final boolean modal, final String title) {
             return new SelectDeviceDialog.Solaris(owner, modal, title);
         }
     }
 
     private static class Solaris extends CommonUNIX {
-        private static class SolarisDeviceFilenameFilter
-                implements FilenameFilter
-        {
+
+        private static class SolarisDeviceFilenameFilter implements FilenameFilter {
+
             public boolean accept(File dir, String name) {
-                /* All the files in /dev/dsk should be valid block device names.
-                 * Alternatively we could use the regexp:
-                 *     c[0-9]+(t[0-9]+)?d[0-9]+([ps][0-9]+)?$
-                 */
+                // All the files in /dev/dsk should be valid block device names.
+                // Alternatively we could use the regexp:
+                //     c[0-9]+(t[0-9]+)?d[0-9]+([ps][0-9]+)?$
+                //
 
                 return true;
             }
-        };
+        }
 
-        private static final FilenameFilter diskDeviceFileNameFilter =
-                new SolarisDeviceFilenameFilter();
+        private static final FilenameFilter diskDeviceFileNameFilter = new SolarisDeviceFilenameFilter();
 
-        public Solaris(final Frame owner, final boolean modal,
-                final String title)
-        {
+        public Solaris(final Frame owner, final boolean modal, final String title) {
             super(owner, modal, title);
         }
 
@@ -1400,6 +1258,7 @@ public abstract class SelectDeviceDialog extends JDialog {
     }
 
     private static final class EmbeddedPartitionEntry {
+
         public final String deviceName;
         public final EmbeddedPartitionEntry outerPartitionEntry;
         public final long partitionNumber;
@@ -1408,8 +1267,7 @@ public abstract class SelectDeviceDialog extends JDialog {
         public final long psOffset;
 
         public EmbeddedPartitionEntry(String deviceName, long partitionNumber,
-                PartitionSystemType psType, Partition partition, int psOffset)
-        {
+                                      PartitionSystemType psType, Partition partition, int psOffset) {
             this.deviceName = deviceName;
             this.outerPartitionEntry = null;
             this.partitionNumber = partitionNumber;
@@ -1421,37 +1279,35 @@ public abstract class SelectDeviceDialog extends JDialog {
         public EmbeddedPartitionEntry(
                 EmbeddedPartitionEntry outerPartitionEntry,
                 long partitionNumber, PartitionSystemType psType,
-                Partition partition, int psOffset)
-        {
+                Partition partition, int psOffset) {
             this.deviceName = outerPartitionEntry.deviceName;
             this.outerPartitionEntry = outerPartitionEntry;
             this.partitionNumber = partitionNumber;
             this.psType = psType;
             this.partition = partition;
-            this.psOffset =
-                    psOffset + outerPartitionEntry.partition.getStartOffset();
+            this.psOffset = psOffset + outerPartitionEntry.partition.getStartOffset();
         }
 
         private String getPartitionSystemString() {
-            switch(psType) {
+            switch (psType) {
                 case MBR:
-                return "MBR";
+                    return "MBR";
                 case GPT:
-                return "GPT";
+                    return "GPT";
                 case APM:
-                return "APM";
+                    return "APM";
                 case DOS_EXTENDED:
-                return "EBR";
+                    return "EBR";
                 default:
-                return "Unknown partition system";
+                    return "Unknown partition system";
             }
         }
 
         private String getPartitionString() {
             return ((outerPartitionEntry != null) ?
-                outerPartitionEntry.getPartitionString() : "") +
-                "[" + getPartitionSystemString() + ":Partition" +
-                partitionNumber + "]";
+                    outerPartitionEntry.getPartitionString() : "") +
+                    "[" + getPartitionSystemString() + ":Partition" +
+                    partitionNumber + "]";
         }
 
         @Override
